1.7.200 DESRESCode#3486 - changes from schrodinger.
        Added SpatialHash::findContactsReuseVoxels.
        New libmsys-core and versioned libmsys.
        gcc/6.3 portability.
        Remove cealign.

1.7.157 DESRESCode#3438 - fix reading sdf files without trailing delim.
        DESRESCode#3472 - fix msys.System.guessBonds.
        DESRESCode#3450 - pickle support for residues and chains.
        DESRESCode#3461 - fix ComputeTopologicalIds bindings.
        DESRESCode#3452 - use garden flex and bison for CentOS7 support.
        use desres-python/2.7.13-02.

1.7.156 Fix build of docs.

1.7.155 Python/2.7.12-03st.

1.7.154 Python/2.7.12-02st, gcc/5.2.0-33x, boost/1.59-06.

1.7.153 Fixed reading of dms files with table properties.
        Experimental new msys to rdkit converter.
        Experimental new IndexedFileLoader.
        Support for ETR writing.
        Added ElectronegativityForElement.
        Don't write mae files with bad key names.
        Rip out resonant_charge and resonant_order.
        Removed msys2mol2 - use dms-select instead.
        Don't grow the SpatialHash grid too large.
        SpatialHash input checks.
        Fixes for smiles charge parsing.
        Fix LoadDMS(buffer).

1.7.149 Pass --reorder to dms-dump in dms-diff.
        Handle coordinate-only Amber crd files. (DESRESCode#3183).
        Fix dms-frame (DESRESCode#3205).

1.7.148 Fixed typo in dtr-validate.

1.7.147 C++: TermTable::atomsFast() and paramFAST().
        Pickle support for Systems (DESRESCode#3148).
        Include all of msys module in the docs.
        Fixes for Mac build/test.

1.7.145 Use just SSE4_1 for findContacts since drdb has only that.

1.7.144 C++: Replace boost::shared_ptr with std::shared_ptr.
        Better smiles support (DESRESCode#3109)
        SSE4 acceleration of findContacts.
        Fix AnnotatedSystem.repr (DESRESCode#3108)
        Added optional weights argument to pfx.aligned_rmsd.
        Throw exception on empty atom selections.
